# stock-take

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
stock_take/: main.py
tests/: test_stock_take.py
