[tool.poetry]
name = "stock-take"
version = "0.1.0"
description = ""
authors = ["Liam Woods <liam.woods47@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
coverage = "^5.5"
hypothesis = "^6.8.4"
pytest-freezegun = "^0.4.2"
pytest-mock = "^3.5.1"
pytest-cov = "^2.11.1"
flake8 = "^3.9.0"
isort = "^5.8.0"
pre-commit = "^2.11.1"
pylint = "^2.7.4"
mypy = "^0.812"

[tool.isort]
profile="black"
multi_line_output = 3
line_length = 88
known_first_party = []
known_third_party = []

[tool.pylint]
options = { disable = ["C0330", "C0326"], max-line-length = 88, load-plugins = "pylint.extensions.mccabe"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
